# real-stereo-extended

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: .gitignore  README.md  install.sh  pyproject.toml  start.sh
backend/assets/: default_calibration.pkl
backend/src/: __main__.py
backend/src/api/: __init__.py  manager.py  ssl_generator.py  validate.py
backend/src/api/controllers/: __init__.py  balances.py  camera_calibration.py  networks.py  nodes.py  room_calibration.py  rooms.py  settings.py  speakers.py
backend/src/balancing/: __init__.py  manager.py  sonos.py  sonos_command.py  volume_interpolation.py
backend/src/config/: __init__.py  config.py  node_type.py
backend/src/models/: __init__.py  acknowledgement.py  acknowledgment.py  node.py  room.py  room_calibration_point.py  speaker.py
backend/src/networking/: __init__.py  ad_hoc_network.py  helpers.py  manager.py  wpa_supplicant.py
backend/src/protocol/: __init__.py  cluster.proto  constants.py  socket.py
backend/src/protocol/client/: __init__.py  client.py
backend/src/protocol/master/: __init__.py  master.py  node_registry.py
backend/src/protocol/server/: __init__.py  server.py
backend/src/protocol/slave/: __init__.py  slave.py
backend/src/repositories/: __init__.py  node.py  repository.py  room.py  settings.py  speaker.py  tracking.py
backend/src/sonos/: __init__.py  adapter.py  adapter_soco.py
backend/src/tracking/: __init__.py  calibration.py  camera.py  fps_calculator.py  hog_grayscale_people_detector.py  hog_people_detector.py  manager.py  motion_people_detector.py  people_detector.py  people_tracker.py  yolo_people_detector.py
(+62 files in other folders)
