[tool.poetry]
name = "real-stereo-extended"
version = "0.1.0"
description = ""
authors = ["Marc Berchtold <me@echolot.io>", "Cyril Wanner <info@cyr.li>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
opencv-python-headless = "^4.5.1"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
