[tool.poetry]
name = "real-stereo-extended"
version = "0.1.0"
description = ""
authors = ["Marc Berchtold <me@echolot.io>", "Cyril Wanner <info@cyr.li>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
opencv-python-headless = "4.5.1.48"
python-socketio = "^5.0.4"
aiohttp = "^3.7.4"
janus = "^0.6.1"
protobuf = "^3.15.6"
soco = "^0.21.2"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
pylint-protobuf = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
