[tool.poetry]
name = "real-stereo-extended"
version = "0.1.0"
description = ""
authors = ["Marc Berchtold <me@echolot.io>", "Cyril Wanner <info@cyr.li>"]

[tool.poetry.dependencies]
python = "^3.7"
python-socketio = "^5.0.4"
aiohttp = "^3.7.4"
protobuf = "^3.15.6"
soco = "^0.22.1"
asyncio-dgram = "^1.2.0"
imutils = "^0.5.4"
cryptography = "^3.4.7"
netifaces = "^0.10.9"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
pylint-protobuf = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
